updated readme
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>